kubernetes/13-Ingress-HTTP-진입점/manifests/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-host
  namespace: rosa-lab
spec:
  ingressClassName: nginx
  rules:
    - host: a.rosa.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-a
                port:
                  number: 80
    - host: b.rosa.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-b
                port:
                  number: 80
