kubernetes/13-Ingress-HTTP-진입점/manifests/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-path
  namespace: rosa-lab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /a
            pathType: Prefix
            backend:
              service:
                name: hello-a
                port:
                  number: 80
          - path: /b
            pathType: Prefix
            backend:
              service:
                name: hello-b
                port:
                  number: 80
